--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,4 @@
 {
-	"editor.tabSize": 4,
-	"editor.formatOnSave": true,
-	"editor.defaultFormatter": "esbenp.prettier-vscode",
-
 	"restoreTerminals.terminals": [
 		{
 			"splitTerminals": [
@@ -30,10 +26,13 @@
 		}
 	],
 
-	"scss.lint.unknownAtRules": "ignore",
+	"editor.tabSize": 4,
+	"editor.formatOnSave": true,
+	"editor.defaultFormatter": "esbenp.prettier-vscode",
 
-	"tailwindCSS.experimental.classRegex": [["tv\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"]],
-
+	"[svelte]": {
+		"editor.defaultFormatter": "svelte.svelte-vscode"
+	},
 	"svelte.plugin.svelte.compilerWarnings": {
 		"a11y-click-events-have-key-events": "ignore",
 		"a11y-no-static-element-interactions": "ignore",
@@ -41,7 +40,9 @@
 		"a11y-label-has-associated-control": "ignore",
 		"a11y-no-noninteractive-element-interactions": "ignore"
 	},
-	"[svelte]": {
-		"editor.defaultFormatter": "svelte.svelte-vscode"
-	}
+	"files.associations": {
+		"*.css": "tailwindcss"
+	},
+
+	"tailwindCSS.experimental.classRegex": [["tv\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"]]
 }
