--- a/package.json
+++ b/package.json
@@ -9,18 +9,41 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"push": "git push -u origin main",
+		"push-f": "git push -u origin main --force",
+		"pull": "git pull origin main"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-vercel": "^5.4.4",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@tailwindcss/typography": "^0.5.15",
+		"@types/node": "^22.7.4",
+		"@types/nprogress": "^0.2.3",
+		"autoprefixer": "^10.4.20",
+		"postcss": "^8.4.47",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
+		"prettier-plugin-tailwindcss": "^0.6.8",
 		"svelte": "^4.2.7",
 		"svelte-check": "^4.0.0",
+		"tailwindcss": "^3.4.13",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"axios": "^1.7.7",
+		"bits-ui": "^0.21.16",
+		"clsx": "^2.1.1",
+		"just-compare": "^2.3.0",
+		"nprogress": "^0.2.0",
+		"svelte-french-toast": "^1.2.0",
+		"svelte-legos": "^0.2.5",
+		"svelte-ux": "^0.74.9",
+		"tailwind-merge": "^2.5.3",
+		"tailwind-variants": "^0.2.1",
+		"zod": "^3.23.8"
+	}
 }
