--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"svelte-legos": "^0.2.5",
 		"svelte-simple-counter": "^0.0.9",
 		"svelte-ux": "^0.74.9",
+		"swiper": "^11.1.14",
 		"tailwind-merge": "^2.5.3",
 		"tailwind-variants": "^0.2.1",
 		"zod": "^3.23.8"
