--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,10 @@
 {
-	"useTabs": true,
 	"tabWidth": 4,
+	"useTabs": true,
 	"singleQuote": true,
 	"trailingComma": "all",
-	"printWidth": 180,
+	"printWidth": 130,
+	"arrowParens": "always",
 	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
 	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
