--- a/package.json
+++ b/package.json
@@ -12,37 +12,52 @@
 		"format": "prettier --write .",
 		"push": "git push -u origin main",
 		"push-f": "git push -u origin main --force",
-		"pull": "git pull origin main"
+		"pull": "git pull origin main",
+		"db:generate": "npx drizzle-kit generate",
+		"db:migrate": "npx drizzle-kit migrate",
+		"db:push": "npx drizzle-kit push",
+		"db:reflect": "yarn db:generate && yarn db:migrate"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-vercel": "^5.4.4",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@tailwindcss/typography": "^0.5.15",
+		"@types/canvas-confetti": "^1.6.4",
+		"@types/crypto-js": "^4.2.2",
 		"@types/node": "^22.7.4",
 		"@types/nprogress": "^0.2.3",
 		"autoprefixer": "^10.4.20",
+		"crypto-js": "^4.2.0",
+		"drizzle-kit": "^0.24.2",
 		"postcss": "^8.4.47",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"prettier-plugin-tailwindcss": "^0.6.8",
 		"svelte": "^4.2.7",
 		"svelte-check": "^4.0.0",
+		"sveltekit-rate-limiter": "^0.6.1",
 		"tailwindcss": "^3.4.13",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
 	"type": "module",
 	"dependencies": {
+		"@dicebear/collection": "^9.2.2",
+		"@dicebear/core": "^9.2.2",
 		"axios": "^1.7.7",
 		"bits-ui": "^0.21.16",
+		"canvas-confetti": "^1.9.3",
 		"clsx": "^2.1.1",
+		"drizzle-orm": "^0.33.0",
 		"just-compare": "^2.3.0",
 		"nprogress": "^0.2.0",
+		"postgres": "^3.4.4",
 		"svelte-french-toast": "^1.2.0",
 		"svelte-legos": "^0.2.5",
 		"svelte-simple-counter": "^0.0.9",
 		"svelte-ux": "^0.74.9",
+		"svelty-picker": "^5.2.9",
 		"swiper": "^11.1.14",
 		"tailwind-merge": "^2.5.3",
 		"tailwind-variants": "^0.2.1",
