--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"drizzle-orm": "^0.33.0",
 		"just-compare": "^2.3.0",
 		"lucide-svelte": "^0.447.0",
+		"natural-orderby": "^4.0.0",
 		"nprogress": "^0.2.0",
 		"postgres": "^3.4.4",
 		"svelte-french-toast": "^1.2.0",
